--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
+                    <div class="Barra"></div>
                 </div>
             </div>
         </div>
