--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
                         <p>Média</p>
                         <p>Forte</p>
                     </div>
-                    <p class=""></p>
+                    <p class="entropia"></p>
                 </div>
             </div>
         </div>
     </section>
+    <script src="main.js"></script>
 </body>
 
 </html>
